<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CityPulse</string>
    <string name="action_settings">Settings</string>
    <string name="default_current_location_text">Default current location</string>
    <string name="ok_button">OK</string>
    <string name="constraints_button">Constraints</string>
    <string name="cancel_button">Cancel</string>
    <string name="car_button">Car</string>
    <string name="walk_button">Walk</string>
    <string name="bicicle_button">Bicycle</string>
    <string name="end_point_text">End point</string>
    <string name="title_activity_parking_place_constraints">ParkingPlaceConstraintsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="parking_place_constraint">Parking place constraints</string>
    <string name="optimization_text">Optimization</string>
    <string name="cheapest_checkbox">Cheapest</string>
    <string name="shortest_walk_checkbox">Shortest walk</string>
    <string name="go_button">GO</string>
    <string name="title_activity_route_constraints">RouteConstraintsActivity</string>
    <string name="route_constraints">Route constraints</string>
    <string name="traffic">Traffic</string>
    <string name="air_pollution">Air Pollution</string>
    <string name="fastets">Fastest</string>
    <string name="Shortest">Shortest</string>
    <string name="Cleaner">Cleaner</string>
    <string name="title_activity_travel_planner_execution">TravelPlannerExecution</string>
    <string name="title_activity_parking_place_selection">ParkingPlaceSelectionActivity</string>
    <string name="title_activity_events">EventsActivity</string>

</resources>
