<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <Button
        android:id="@+id/walkButton"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/walk_button" />

    <Button
        android:id="@+id/carButton"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/walkButton"
        android:text="@string/car_button" />

    <Button
        android:id="@+id/bicicleButton"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/walkButton"
        android:text="@string/bicicle_button" />

    <EditText
        android:id="@+id/travelPlannerStartingPointTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/walkButton"
        android:layout_centerHorizontal="true"
        android:ems="14"
        android:hint="@string/default_current_location_text"
        android:inputType="textPostalAddress" >

        <requestFocus />
    </EditText>

    <com.siemens.citypulse.androidapp.autocompletetext.CustomAutoCompleteTextView
        android:id="@+id/travelPlannerEndPointTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/travelPlannerStartingPointTextField"
        android:layout_alignRight="@+id/travelPlannerStartingPointTextField"
        android:layout_below="@+id/travelPlannerStartingPointTextField"
        android:ems="10"
        android:hint="@string/end_point_text"
        android:inputType="textPostalAddress" />

    <fragment
        android:id="@+id/travelPlannerFragmentMap"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TravelPlannerConstraints"
        android:layout_alignLeft="@+id/travelPlannerEndPointTextField"
        android:layout_alignRight="@+id/travelPlannerEndPointTextField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/travelPlannerEndPointTextField"
        android:layout_marginTop="14dp" />

    <Button
        android:id="@+id/travelPlannerOKButton"
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/travelPlannerFragmentMap"
        android:layout_alignParentBottom="true"
        android:text="@string/ok_button" />

    <Button
        android:id="@+id/TravelPlannerConstraints"
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/travelPlannerFragmentMap"
        android:text="@string/constraints_button" />

</RelativeLayout>