<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

    <fragment
        android:id="@+id/map1"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/okButton1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/defaultLocation1" />

    <EditText
        android:id="@+id/defaultLocation1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="38dp"
        android:layout_toLeftOf="@+id/goButton"
        android:ems="14"
        android:hint="@string/default_current_location_text"
        android:inputType="textPostalAddress" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/okButton1"
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/map1"
        android:layout_alignParentBottom="true"
        android:text="@string/ok_button" />

    <Button
        android:id="@+id/constraintsButton1"
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/map1"
        android:text="@string/constraints_button" />

    <Button
        android:id="@+id/goButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/defaultLocation1"
        android:layout_alignParentRight="true"
        android:text="@string/go_button" />

</RelativeLayout>